Modified Files: 	bin/Makefile src/kernel/secondboot.asm 	tools/MonaNET16/SecondBoot/SecondBoot.cs

--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -6,11 +6,11 @@ APP_FILES  = `cd root; ls APPS/*.E* APPS/*.MSH`
 LIB_FILES  = `cd root; ls LIBS/*.*`
 
 all:
-	./getFileSize$(EXEEXT) root/SERVERS/FILE.BIN FILE.BIN file.head
-	./getFileSize$(EXEEXT) root/SERVERS/PROCESS.BIN PROCESS.BIN process.head
-	./getFileSize$(EXEEXT) root/SERVERS/MONITOR.BIN MONITOR.BIN monitor.head
-	mv root/KERNEL.IMG root/tmp
-	cat ./root/tmp file.head root/SERVERS/FILE.BIN process.head root/SERVERS/PROCESS.BIN monitor.head root/SERVERS/MONITOR.BIN terminater.head > root/KERNEL.IMG
+	./getFileSize$(EXEEXT) ../src/servers/file/FILE.BIN FILE.BIN file.head
+	./getFileSize$(EXEEXT) ../src/servers/process/PROCESS.BIN PROCESS.BIN process.head
+	./getFileSize$(EXEEXT) ../src/servers/moniter/MONITOR.BIN MONITOR.BIN monitor.head
+	cp ../src/kernel/KERNEL.IMG root/tmp
+	cat ./root/tmp file.head ../src/servers/file/FILE.BIN process.head ../src/servers/process/PROCESS.BIN monitor.head ../src/servers/moniter/MONITOR.BIN terminater.head > root/KERNEL.IMG
 	rm -f file.head process.head monitor.head root/tmp
 	cd root/SERVERS; rm -f PROCESS.BIN FILE.BIN MONITOR.BIN
 	cp fat_template.img $(TARGET)
