--- a/Mona/apps/baygui/gbrowser/Makefile
+++ b/Mona/apps/baygui/gbrowser/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GBROWSER
 SOURCES = gbrowser.cpp htmlpanel.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
