--- a/Mona/apps/baygui/gnullpo/Makefile
+++ b/Mona/apps/baygui/gnullpo/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GNULLPO
 SOURCES = gnullpo.cpp 
-INSTDIR = $(BINDIR)/root/APPS/GNULLPO.APP
+INSTDIR = $(BINDIR)/root/APPS/BAYGUI/GNULLPO.APP
 INSTFILES = NULLPO.BM5 GAT.BM5
 CLEANFILES = $(INSTFILES)
 
