--- a/Mona/apps/gui/mtorz/Makefile
+++ b/Mona/apps/gui/mtorz/Makefile
@@ -1,6 +1,6 @@
 TARGET  = MTORZ
 SOURCES = Form1.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/MONAFRMS
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
