--- a/Mona/apps/baygui/gbball/Makefile
+++ b/Mona/apps/baygui/gbball/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GBBALL
 SOURCES = gbball.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
