--- a/Mona/apps/baygui/gchat/Makefile
+++ b/Mona/apps/baygui/gchat/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GCHAT
 SOURCES = gchat.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
