--- a/Mona/apps/baygui/gclock/Makefile
+++ b/Mona/apps/baygui/gclock/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GCLOCK
 SOURCES = gclock.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
