--- a/Mona/apps/baygui/guitest1/Makefile
+++ b/Mona/apps/baygui/guitest1/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GUITEST1
 SOURCES = guitest1.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
