--- a/Mona/apps/baygui/gversion/Makefile
+++ b/Mona/apps/baygui/gversion/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GVERSION
 SOURCES = gversion.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
