--- a/Mona/apps/gui/monafile/Makefile
+++ b/Mona/apps/gui/monafile/Makefile
@@ -1,7 +1,7 @@
 TARGET  = MONAFILE
 SOURCES = FileManager.cpp FileWindow.cpp FileBrowser.cpp Icon.cpp
 
-INSTDIR    = $(BINDIR)/root/APPS/MONAFILE.APP
+INSTDIR    = $(BINDIR)/root/APPS/MONAFRMS/MONAFILE.APP
 INSTFILES  = ICONS.BM2
 CLEANFILES = $(INSTFILES)
 
