--- a/Mona/apps/gui/ps/Makefile
+++ b/Mona/apps/gui/ps/Makefile
@@ -1,6 +1,6 @@
 TARGET  = GPS
 SOURCES = Form1.cpp
-INSTDIR = $(BINDIR)/root/APPS
+INSTDIR = $(BINDIR)/root/APPS/MONAFRMS
 
 MONADIR    = ../../..
 ADDLINK    = -lmonalibc
