Modified Files: 	apps/baygui/gfire/.cvsignore bin/Makefile src/kernel/Makefile 	tools/Makefile

--- a/Mona/src/kernel/Makefile
+++ b/Mona/src/kernel/Makefile
@@ -3,19 +3,15 @@ MONADIR         = ../..
 include $(MONADIR)/env/dirnames.inc
 include $(MONADIR)/env/Makefile.inc
 
-MONA_HEADER_SIZE = 0x10
 KERNEL_BASE_ADDR = 0x1000
 REL_KERNEL_ADDR  = 0x0200
-#KERNEL_START_ADDR= 0x1A10 # ($(REL_KERNEL_ADDR) + $(KERNEL_BASE_ADDR) + $(MONA_HEADER_SIZE))
-KERNEL_START_ADDR = 0x1200
-MONA_CFG_SIZE    = 0x1000
+KERNEL_START_ADDR= 0x1200 # REL_KERNEL_ADDR + KERNEL_BASE_ADDR
 MONA_CFG_ADDR    = 0x90000
 LFLAGS       = -n -Ttext $(KERNEL_START_ADDR) -static
 CXXFLAGS    += -DOSTYPE="\"$(OSTYPE)\"" -DREL_KERNEL_ADDR=$(REL_KERNEL_ADDR) -DKERNEL_BASE_ADDR=$(KERNEL_BASE_ADDR)
 CXXFLAGS    += -DMONA_CFG_SIZE=$(MONA_CFG_SIZE) -DMONA_CFG_ADDR=$(MONA_CFG_ADDR)
 TOOLSDIR     = $(MONADIR)/tools
 INCLUDE      = -I$(INCDIR) -I$(TOOLSDIR)
-KERNEL_IMG   = KERNEL.IMG
 BOOT1        = firstboot.bin
 BOOT2        = secondboot.bin
 KERNEL       = third.bin
@@ -54,13 +50,7 @@ SOURCES      = cstart.cpp            \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
-#all : $(BOOT1) $(KERNEL_IMG)
 all : $(BOOT1) $(BOOT2) $(KERNEL)
-
-#$(KERNEL_IMG) : $(BOOT2) $(KERNEL)
-#	$(BINDIR)/getFileSize$(EXEEXT) $(KERNEL) $(KERNEL) head.txt
-#	cat $(BOOT2) head.txt $(KERNEL) > $@
-#	rm -f head.txt
 
 $(KERNEL) : $(OBJECTS) $(DRVROBJ) mode12h.o ihandler.o core.o
 	$(LD) --Map kernel.map $(LFLAGS) -o$@ $(OBJECTS) mode12h.o ihandler.o core.o
@@ -69,7 +59,8 @@ $(KERNEL) : $(OBJECTS) $(DRVROBJ) mode12h.o ihandler.o core.o
 
 install : all
 	$(INSTALL) $(BOOT1) $(BINDIR)
-#	$(INSTALL) $(KERNEL_IMG) $(BINDIR)/root
+	$(INSTALL) $(BOOT2) $(BINDIR)/root/LOADER.BIN
+	$(INSTALL) $(KERNEL) $(BINDIR)/root/KERNEL.BIN
 
 .SUFFIXES: .cpp .o
 
@@ -81,7 +72,7 @@ $(BOOT1) : firstboot.asm
 	$(NASM) firstboot.asm -o $@ -l $(LISTDIR)/first.list
 
 $(BOOT2) : secondboot.asm
-	$(NASM) -DREL_KERNEL_ADDR=$(REL_KERNEL_ADDR) -DMONA_HEADER_SIZE=$(MONA_HEADER_SIZE) -DMONA_CFG_SIZE=$(MONA_CFG_SIZE) -DMONA_CFG_ADDR=$(MONA_CFG_ADDR) secondboot.asm -o $@ -l $(LISTDIR)/second.list
+	$(NASM) -DREL_KERNEL_ADDR=$(REL_KERNEL_ADDR) -DMONA_CFG_ADDR=$(MONA_CFG_ADDR) secondboot.asm -o $@ -l $(LISTDIR)/second.list
 
 mode12h.o : mode12h.asm
 	$(NASM) $(NFLAGS) mode12h.asm  -o $@ -l $(LISTDIR)/mode12h.list
@@ -99,6 +90,6 @@ depend :
 	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
 
 clean :
-	rm -f $(OBJECTS) $(BOOT1) $(BOOT2) $(KERNEL) $(KERNEL_IMG) mode12h.o ihandler.o core.o $(LISTDIR)/*.list *.map
+	rm -f $(OBJECTS) $(BOOT1) $(BOOT2) $(KERNEL) KERNEL.IMG mode12h.o ihandler.o core.o $(LISTDIR)/*.list *.map
 
 include ./dependencies
