--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -4,16 +4,10 @@ ROOT_FILES     = `cd root; ls *.*`
 SVR_FILES      = `cd root; ls SERVERS/*.*`
 APP_FILES      = `cd root; ls APPS/*.E* APPS/*.MSH`
 LIB_FILES      = `cd root; ls LIBS/*.*`
-BAYGUI_FILES   = `cd root; ls APPS/BAYGUI/*.E* APPS/BAYGUI/*.MSH`
-MONAFRMS_FILES = `cd root; ls APPS/MONAFRMS/*.E* APPS/MONAFRMS/*.MSH`
+BAYGUI_FILES   = `cd root; ls APPS/BAYGUI/*.E*`
+MONAFRMS_FILES = `cd root; ls APPS/MONAFRMS/*.E*`
 
 all:
-#	./getFileSize$(EXEEXT) ../src/servers/file/FILE.BIN FILE.BIN file.head
-#	./getFileSize$(EXEEXT) ../src/servers/process/PROCESS.BIN PROCESS.BIN process.head
-#	./getFileSize$(EXEEXT) ../src/servers/moniter/MONITOR.BIN MONITOR.BIN monitor.head
-#	cp ../src/kernel/KERNEL.IMG root/tmp
-#	cat ./root/tmp file.head ../src/servers/file/FILE.BIN process.head ../src/servers/process/PROCESS.BIN monitor.head ../src/servers/moniter/MONITOR.BIN terminater.head > root/KERNEL.IMG
-	rm -f file.head process.head monitor.head root/tmp
 	cd root/SERVERS; rm -f PROCESS.BIN FILE.BIN MONITOR.BIN
 	cp fat_template.img $(TARGET)
 	./fat_write $(TARGET) --mbr firstboot.bin
@@ -22,8 +16,6 @@ all:
 	./fat_write $(TARGET) --mkdir APPS/MONAFRMS
 	./fat_write $(TARGET) --mkdir APPS/BAYGUI
 	./fat_write $(TARGET) --mkdir LIBS
-	./fat_write $(TARGET) ../src/kernel/secondboot.bin LOADER.BIN
-	./fat_write $(TARGET) ../src/kernel/third.bin KERNEL.BIN
 	./fat_write $(TARGET) ../src/servers/file/FILE.BIN FILE.BIN
 	./fat_write $(TARGET) ../src/servers/process/PROCESS.BIN PROCESS.BIN
 	./fat_write $(TARGET) ../src/servers/moniter/MONITOR.BIN MONITOR.BIN
