--- a/Mona/apps/non-gui/pciinfo/Makefile
+++ b/Mona/apps/non-gui/pciinfo/Makefile
@@ -8,11 +8,11 @@ CLEANFILES = $(INSTFILES)
 MONADIR    = ../../..
 ADDLINK    = -lmonalibc
 ADDLINKDEP = $(MONADIR)/lib/libmonalibc.a
-#ifneq ($(BUILD_TARGET),ELF)
-#include $(MONADIR)/env/monapi-ex2.inc
-#else
+ifneq ($(BUILD_TARGET),ELF)
+include $(MONADIR)/env/monapi-ex2.inc
+else
 include $(MONADIR)/env/monapi-el2.inc
-#endif
+endif
 
 all: $(INSTFILES)
 
