--- a/Mona/apps/gui/2chAA/Makefile
+++ b/Mona/apps/gui/2chAA/Makefile
@@ -3,15 +3,15 @@ SOURCES = Form1.cpp
 INSTDIR = $(BINDIR)/root/APPS/MONAFRMS
 
 MONADIR    = ../../..
-#ifneq ($(BUILD_TARGET),ELF)
-#ADDLINK    = -lgui-imp
-#ADDLINKDEP = $(MONADIR)/lib/libgui-imp.a
-#include $(MONADIR)/env/monapi-ex2.inc
-#else
+ifneq ($(BUILD_TARGET),ELF)
+ADDLINK    = -lgui-imp
+ADDLINKDEP = $(MONADIR)/lib/libgui-imp.a
+include $(MONADIR)/env/monapi-ex2.inc
+else
 ADDLINK    = -lgui
 ADDLINKDEP = $(MONADIR)/lib/libgui.a
 include $(MONADIR)/env/monapi-el2.inc
-#endif
+endif
 
 CXXFLAGS += -DDEBUG
 
