--- a/Mona/apps/gui/reversi/Makefile
+++ b/Mona/apps/gui/reversi/Makefile
@@ -5,11 +5,19 @@ INSTDIR   = $(BINDIR)/root/APPS/MONAFRMS/GREVERSI.APP
 INSTFILES = RED.BMP WHITE.BMP
 
 MONADIR = ../../..
+ifneq ($(BUILD_TARGET),ELF)
+ADDLINK    = -lgui-imp
+ADDLINKDEP = $(MONADIR)/lib/libgui-imp.a
+include $(MONADIR)/env/monapi-ex2.inc
+else
+ADDLINK    = -lgui
+ADDLINKDEP = $(MONADIR)/lib/libgui.a
 include $(MONADIR)/env/monapi-el2.inc
+endif
 
 LINK      = -lgui -lmonapi -lmonalibc
 CXXFLAGS += -DDEBUG
 
-$(TARGET).ELF: $(LIBDIR)/libgui.a
+$(TARGET).EXE: $(LIBDIR)/libgui.a
 
 include dependencies
