--- a/Mona/env/linux2.x.env
+++ b/Mona/env/linux2.x.env
@@ -13,4 +13,6 @@ NFLAGS   = -I $(MONADIR)/include/ -DBUILD_ON_LINUX -f elf
 OSTYPE   = `uname -sr`
 EXEEXT   =
 MONAELF_LDS = -T $(MONADIR)/env/monaelf.lds
+
+SYMPREFIX = 
 USER_START_FUNCTION = user_start
