--- a/Mona/env/linux3.x.env
+++ b/Mona/env/linux3.x.env
@@ -12,5 +12,7 @@ CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -DBUILD_ON_LINUX -f elf
 OSTYPE   = `uname -sr`
 EXEEXT   =
+
 MONAELF_LDS = -T $(MONADIR)/env/monaelf.lds
+SYMPREFIX = 
 USER_START_FUNCTION = user_start
