--- a/Mona/env/uxmingw.env
+++ b/Mona/env/uxmingw.env
@@ -11,4 +11,6 @@ CFLAGS   = -nostdlib -Wall -fno-builtin -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
 OSTYPE   = `uname -sr`
+
+SYMPREFIX = _
 USER_START_FUNCTION = _user_start
