--- a/Mona/env/mingw.env
+++ b/Mona/env/mingw.env
@@ -12,4 +12,6 @@ CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
 OSTYPE   = `uname -sr`
 EXEEXT   = .exe
+
+SYMPREFIX = _
 USER_START_FUNCTION = _user_start
