remove GUI prefix "G" in MonaForms

--- a/Mona/apps/gui/reversi/Makefile
+++ b/Mona/apps/gui/reversi/Makefile
@@ -1,7 +1,7 @@
-TARGET    = GREVERSI
+TARGET    = REVERSI
 SOURCES   = ReversiForm.cpp ReversiBoard.cpp Piece.cpp
 
-INSTDIR   = $(BINDIR)/root/APPS/MONAFRMS/GREVERSI.APP
+INSTDIR   = $(BINDIR)/root/APPS/MONAFRMS/$(TARGET).APP
 INSTFILES = RED.BMP WHITE.BMP
 
 MONADIR = ../../..
