--- a/Mona/apps/gui/kukuri/Makefile
+++ b/Mona/apps/gui/kukuri/Makefile
@@ -1,7 +1,7 @@
 TARGET  = KUKURI
 SOURCES = Kukuri.cpp
 
-INSTDIR    = $(BINDIR)/root/APPS/MONAFRMS/KUKURI.APP
+INSTDIR    = $(BINDIR)/root/APPS/MONAFRMS/$(TARGET).APP
 INSTFILES  = KUKURI.BM2
 CLEANFILES = $(INSTFILES)
 
