--- a/Mona/bin/root/MONAGUI.INI
+++ b/Mona/bin/root/MONAGUI.INI
@@ -1,5 +1,5 @@
 [General]
-Run=/APPS/MONAFRMS/MONAFILE.APP/MONAFILE.EX2,/APPS/MONAFRMS/GSHELL.EX2
+Run=/APPS/MONAFRMS/MONAFILE.APP/MONAFILE.EX2,/APPS/MONAFRMS/SHELL.EX2
 
 [Wallpaper]
 Source=/MONAHERE.JPG
