Modified Files: 	apps/gui/Makefile apps/gui/clock/Form1.cpp 	apps/gui/kukuri/Kukuri.cpp apps/gui/launcher/Form1.cpp

--- a/Mona/apps/gui/Makefile
+++ b/Mona/apps/gui/Makefile
@@ -4,7 +4,7 @@ all:
 	@cd 2chAA && $(MAKE) $@
 	@cd noiz2bg && $(MAKE) $@
 	@cd fire && $(MAKE) $@
-#	@cd launcher && $(MAKE) $@
+	@cd launcher && $(MAKE) $@
 	@cd shell && $(MAKE) $@
 	@cd clock && $(MAKE) $@
 	@cd cube && $(MAKE) $@
@@ -20,7 +20,7 @@ install:
 	@cd 2chAA && $(MAKE) $@
 	@cd noiz2bg && $(MAKE) $@
 	@cd fire && $(MAKE) $@
-#	@cd launcher && $(MAKE) $@
+	@cd launcher && $(MAKE) $@
 	@cd shell && $(MAKE) $@
 	@cd clock && $(MAKE) $@
 	@cd cube && $(MAKE) $@
@@ -36,7 +36,7 @@ clean: touchdepend
 	@cd 2chAA && $(MAKE) $@
 	@cd noiz2bg && $(MAKE) $@
 	@cd fire && $(MAKE) $@
-#	@cd launcher && $(MAKE) $@
+	@cd launcher && $(MAKE) $@
 	@cd shell && $(MAKE) $@
 	@cd clock && $(MAKE) $@
 	@cd cube && $(MAKE) $@
@@ -52,7 +52,7 @@ depend: touchdepend
 	@cd 2chAA && $(MAKE) $@
 	@cd noiz2bg && $(MAKE) $@
 	@cd fire && $(MAKE) $@
-#	@cd launcher && $(MAKE) $@
+	@cd launcher && $(MAKE) $@
 	@cd shell && $(MAKE) $@
 	@cd clock && $(MAKE) $@
 	@cd cube && $(MAKE) $@
@@ -68,7 +68,7 @@ distclean:
 	rm -f 2chAA/dependencies
 	rm -f noiz2bg/dependencies
 	rm -f fire/dependencies
-#	rm -f launcher/dependencies
+	rm -f launcher/dependencies
 	rm -f shell/dependencies
 	rm -f clock/dependencies
 	rm -f cube/dependencies
@@ -84,7 +84,7 @@ touchdepend:
 	touch 2chAA/dependencies
 	touch noiz2bg/dependencies
 	touch fire/dependencies
-#	touch launcher/dependencies
+	touch launcher/dependencies
 	touch shell/dependencies
 	touch clock/dependencies
 	touch cube/dependencies
