--- a/Mona/apps/baygui/gshell/Makefile
+++ b/Mona/apps/baygui/gshell/Makefile
@@ -4,11 +4,11 @@ INSTDIR = $(BINDIR)/root/APPS/BAYGUI
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
-ADDLINK    = -lbaygui-imp
+ADDLINK    = -lbaygui-imp -monalibc-imp
 ADDLINKDEP = $(MONADIR)/lib/libbaygui-imp.a
 include $(MONADIR)/env/monapi-ex5.inc
 else
-ADDLINK    = -lbaygui
+ADDLINK    = -lbaygui -monalibc
 ADDLINKDEP = $(MONADIR)/lib/libbaygui.a
 include $(MONADIR)/env/monapi-el5.inc
 endif
