--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -9,6 +9,7 @@ all:
 	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd gshell && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
 	@cd mblupin && $(MAKE) $@
@@ -25,6 +26,7 @@ install:
 	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd gshell && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
 	@cd mblupin && $(MAKE) $@
@@ -41,6 +43,7 @@ clean: touchdepend
 	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd gshell && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
 	@cd mblupin && $(MAKE) $@
@@ -57,6 +60,7 @@ depend: touchdepend
 	@cd gnoiz2bg && $(MAKE) $@
 	@cd gnullpo && $(MAKE) $@
 	@cd grunner && $(MAKE) $@
+	@cd gshell && $(MAKE) $@
 	@cd guitest1 && $(MAKE) $@
 	@cd gversion && $(MAKE) $@
 	@cd mblupin && $(MAKE) $@
@@ -73,6 +77,7 @@ distclean:
 	rm -f gnoiz2bg/dependencies
 	rm -f gnullpo/dependencies
 	rm -f grunner/dependencies
+	rm -f gshell/dependencies
 	rm -f guitest1/dependencies
 	rm -f gversion/dependencies
 	rm -f mblupin/dependencies
@@ -89,6 +94,7 @@ touchdepend:
 	touch gnoiz2bg/dependencies
 	touch gnullpo/dependencies
 	touch grunner/dependencies
+	touch gshell/dependencies
 	touch guitest1/dependencies
 	touch gversion/dependencies
 	touch mblupin/dependencies
