--- a/Mona/bin/root/BAYGUI.INI
+++ b/Mona/bin/root/BAYGUI.INI
@@ -1,6 +1,5 @@
 [General]
-rem Run=/APPS/BAYGUI/GNULLPO.APP/GNULLPO.EX5,/APPS/BAYGUI/GVERSION.EX5
-Run=/APPS/BAYGUI/GLAUNCH.EX5
+Run=/APPS/BAYGUI/GLAUNCH.EX5,/APPS/BAYGUI/GSHELL.EX5
 
 [Wallpaper]
 Source=/MONAWALL.BM5
